C2 fails with "assert(is_IfTrue()) failed: invalid node class: IfFalse" due to Template Assertion Predicate with two UCTs

XMLWordPrintable

    • b21

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/7a20d425-e769-4142-b5c1-e3cc2d88e03e-S37402/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/8abb7ef2-4e5e-4669-a7d1-a338aa3a83bb/runs/70ebfb38-b65c-45c6-9dc6-4625b8767a2b/workspace/open/src/hotspot/share/opto/node.hpp:928), pid=4461, tid=28419
      # assert(is_IfTrue()) failed: invalid node class: IfFalse
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+20) (fastdebug build 24-ea+20-2277)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+20-2277, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Xmx1G -XX:+IgnoreUnrecognizedVMOptions -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,*Test*::* -XX:-TieredCompilation -Xbatch -XX:+UnlockDiagnosticVMOptions -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:StressSeed=220487762 -XX:+VerifyLoopOptimizations -XX:VerifyIterativeGVN=10 -XX:MaxRAMPercentage=6.25 -Dtest.boot.jdk=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk/23/37/bundles/macos-aarch64/jdk-23_macos-aarch64_bin.tar.gz/jdk-23.jdk/Contents/Home -Djava.io.tmpdir=/System/Volumes/Data/mesos/work_dir/slaves/7a20d425-e769-4142-b5c1-e3cc2d88e03e-S37484/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/19e21fbb-7fa6-4470-9b2e-691eb2e9f0f9/runs/2f1c2bdb-fc06-4a54-a63f-1914806da7fb/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_javafuzzer_BigTest_java/tmp Test

      Host: "Macmini9,1" arm64, 8 cores, 16G, Darwin 23.4.0, macOS 14.4.1 (23E224)
      Time: Tue Oct 15 19:36:28 2024 GMT elapsed time: 0.084357 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x000000012e818410): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=28419, stack(0x000000016cce4000,0x000000016cee7000) (2060K)]


      Current CompileTask:
      C2:84 4 b Test::mainTest (1041 bytes)

      Stack: [0x000000016cce4000,0x000000016cee7000], sp=0x000000016cee2bf0, free space=2042k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x116472c] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x544 (node.hpp:928)
      V [libjvm.dylib+0x1164edc] VMError::report_and_die(Thread*, unsigned int, unsigned char*, void*, void*)+0x0
      V [libjvm.dylib+0x5679b4] print_error_for_unit_test(char const*, char const*, char*)+0x0
      V [libjvm.dylib+0xc65800] RegularPredicateBlockIterator::for_each(PredicateVisitor&) const+0x1a8
      V [libjvm.dylib+0xc982f8] PredicateIterator::for_each(PredicateVisitor&) const+0xdc
      V [libjvm.dylib+0xca1140] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x4b8
      V [libjvm.dylib+0xc9b714] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0x270
      V [libjvm.dylib+0xc99d8c] PhaseIdealLoop::build_and_optimize()+0x65c
      V [libjvm.dylib+0x4dfc98] PhaseIdealLoop::PhaseIdealLoop(PhaseIterGVN&, LoopOptsMode)+0x18c
      V [libjvm.dylib+0x4d28b4] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x6c
      V [libjvm.dylib+0x4d2e6c] Compile::optimize_loops(PhaseIterGVN&, LoopOptsMode)+0x7c
      V [libjvm.dylib+0x4cb9d4] Compile::Optimize()+0xa1c
      V [libjvm.dylib+0x4c9ba4] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x13c4
      V [libjvm.dylib+0x38ebec] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1e0
      V [libjvm.dylib+0x4e880c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x868
      V [libjvm.dylib+0x4e7c3c] CompileBroker::compiler_thread_loop()+0x348
      V [libjvm.dylib+0x8b231c] JavaThread::thread_main_inner()+0x1dc
      V [libjvm.dylib+0x10a46a4] Thread::call_run()+0xf4
      V [libjvm.dylib+0xe3ded0] thread_native_entry(Thread*)+0x138
      C [libsystem_pthread.dylib+0x6f94] _pthread_start+0x88

        1. hs_err_pid4461.log
          91 kB
        2. replay_pid4461.log
          133 kB
        3. Test.java
          10 kB

            Assignee:
            Christian Hagedorn
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: