src/hotspot/share/opto/predicates.hpp
@@ -369,6 +369,12 @@ class RuntimePredicate : public Predicate {
   static bool is_predicate(Node* node, Deoptimization::DeoptReason deopt_reason);
 };
 
+// Utility class to represent an Assertion Predicate.
+class AssertionPredicate : public StackObj {
+ public:
+  static bool may_be_predicate_if(const Node* node);
+};
+
 // Class to represent a Template Assertion Predicate.
 class TemplateAssertionPredicate : public Predicate {
   IfTrueNode* _success_proj;
@@ -687,10 +693,15 @@ class PredicateIterator : public StackObj {
     Node* current = _start_node;
     PredicateBlockIterator loop_limit_check_predicate_iterator(current, Deoptimization::Reason_loop_limit_check);
     current = loop_limit_check_predicate_iterator.for_each(predicate_visitor);
-    PredicateBlockIterator profiled_loop_predicate_iterator(current, Deoptimization::Reason_profile_predicate);
-    current = profiled_loop_predicate_iterator.for_each(predicate_visitor);
-    PredicateBlockIterator loop_predicate_iterator(current, Deoptimization::Reason_predicate);
-    return loop_predicate_iterator.for_each(predicate_visitor);
+    if (UseLoopPredicate) {
+      if (UseProfiledLoopPredicate) {
+        PredicateBlockIterator profiled_loop_predicate_iterator(current, Deoptimization::Reason_profile_predicate);
+        current = profiled_loop_predicate_iterator.for_each(predicate_visitor);
+      }
+      PredicateBlockIterator loop_predicate_iterator(current, Deoptimization::Reason_predicate);
+      current = loop_predicate_iterator.for_each(predicate_visitor);
+    }
+    return current;
   }
 };
 
